# simmopp

./: CMakeLists.txt  basic_vector.hpp  main.cpp
include/simmo/: angle.hpp  basic_line.hpp  basic_vector.hpp  bitmatrix.hpp  line.hpp  math.hpp  point.hpp  ray.hpp  segment.hpp  utility.hpp  vector.hpp
include/simmo/basic_vector/: comparison.hpp
include/simmo/iterator/: regex.hpp
include/simmo/metaprogramming/: conditional_cascade.hpp
src/: main.cpp  main2.cpp  main3.cpp
test/: CMakeLists.txt  angle_test.cpp  bitmatrix_test.cpp  conditional_cascade_test.cpp  point_test.cpp  regex_iterator_test.cpp  test1.cpp  vector_test.cpp
